# arxiver

./: .gitignore  CHANGELOG.md  CLAUDE.md  FASTMCP_ENHANCEMENTS.md  LICENSE  README-MCP.md  README.md  data_recovery_strategy.py  pyproject.toml  requirements.txt  run_comprehensive_tests.py  run_mcp_server.sh
arxiver/: __init__.py  arxiv.py  chromadb_manager.py  database.md  database.py  database_migration.py  llm.py  logger.py  main.py  mcp_server.py  test_arxiv.py  test_database.py  test_llm.py  utils.py  vector_db.py
changelog/: 2025-07-19-duplicate-llm-calls-fix.md  2025-07-19-paper-id-cleanup.md  2025-07-19_chromadb_issue.md  2025-07-19_comprehensive_review_complete.md  2025-07-19_critical_analysis.md  2025-07-19_database_migration_summary.md  2025-07-19_prevent_chromadb_issues.md  2025-07-19_vector_db_reconstruction.md  CHANGELOG.md
docs/: arxiver.drawio.html  prez.html  prez.md
predictor/: model-20240515_2032-3003.keras  model-20241120_2159-31783.keras  moving_predictor.ipynb  tuna.ipynb
tests/: test_api_endpoints.py  test_data_integrity.py  test_ingestion_workflow.py  test_mcp_performance.py  test_mcp_tools.py
trender/: Trend Analysis.ipynb  trender.py
trender/.ipynb_checkpoints/: Trend Analysis-checkpoint.ipynb
ui/: arxiver_ui.py
workers/: concise-summarizer.py  ingester-crontab  ingester.py
